# Clustered-ChatServer

./: README.md  autobuild.sh
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.hpp
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/client/: main.cpp
src/server/: chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
test/testBoost/: Boost_text.cpp  a.out
test/testjson/: testjson  testjson.cpp
test/testmuduo/: CMakeLists.txt  Muduo_text.cpp  muduo_server.cpp
